
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int aio_context_t ;


 int READ_IMPLIES_EXEC ;
 int __NR_io_setup ;
 int err (int,char*) ;
 int pause () ;
 int personality (int ) ;
 scalar_t__ syscall (int ,int,int *) ;

int main(void) {
  aio_context_t ctx;
  personality(READ_IMPLIES_EXEC);
  if (syscall(__NR_io_setup, 1, &ctx))
    err(1, "io_setup");
  while (1) pause();
}
